[VEUE-613] corrected z-indexes for video

--- a/app/javascript/style/video/_layout.scss
+++ b/app/javascript/style/video/_layout.scss
@@ -45,7 +45,7 @@
     .mute-banner {
       // layout
       position: absolute;
-      z-index: z_index.$mute-banner;
+      z-index: z_index.$video-controls;
       left: 0.6rem;
       top: 1rem;
       height: 2rem;
@@ -197,7 +197,7 @@
     .pip-component {
       $pip-padding: 10px;
       position: absolute;
-      z-index: 1;
+      z-index: z_index.$secondary-video;
 
       &[data-corner="bottom-right"] {
         bottom: $pip-padding;
